// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a future release 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :question: Unlabelled

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`can infer repo info 1`] = `
"# Changelog

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`handles GitHub API pagination 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :question: Unlabelled

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`handles PR labels 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :boom: Breaking Change

- [#6](https://github.com/owner/repo/pull/6) Pull request 6 ([@user](https://github.com/user))

#### :bug: Bug Fix

- [#5](https://github.com/owner/repo/pull/5) Pull request 5 ([@user](https://github.com/user))

#### :memo: Documentation

- [#4](https://github.com/owner/repo/pull/4) Pull request 4 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :rocket: Enhancement

- [#3](https://github.com/owner/repo/pull/3) Pull request 3 ([@user](https://github.com/user))

#### :house: Internal

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`handles multiple PRs per tag 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :question: Unlabelled

- [#4](https://github.com/owner/repo/pull/4) Pull request 4 ([@user](https://github.com/user))
- [#3](https://github.com/owner/repo/pull/3) Pull request 3 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :question: Unlabelled

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))
- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`only uses merged PRs 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-01-31)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :question: Unlabelled

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-30)

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))
"
`;

exports[`refetches missing tag commits 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

#### :question: Unlabelled

- [#1](https://github.com/owner/repo/pull/1) Pull request 1 ([@user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

#### :question: Unlabelled

- [#2](https://github.com/owner/repo/pull/2) Pull request 2 ([@user](https://github.com/user))
"
`;
